fix double scroll

--- a/static/auth/css/auth.css
+++ b/static/auth/css/auth.css
@@ -12,11 +12,9 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  min-height: 100vh;
   height: auto;
   overflow: visible;
   padding-top: 30px;
-  margin-bottom: 30px;
   box-sizing: border-box;
 }
 
@@ -26,11 +24,10 @@ html, body {
 .form {
   position: absolute;
   width: 100%;
-  min-height: auto;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
   padding-top: 20px;
+  padding-bottom: 20px;
 
   opacity: 0;
   transform: scale(0.95) rotate(-1.5deg);
@@ -82,8 +79,9 @@ h5 {
   width: 100%;
   max-width: 100%;
   height: 48px;
-  padding: 0 14px;
-  margin-bottom: 20px;
+  padding: 7px 7px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 
   font-size: 16px;
   color: #3e3e3e;
@@ -270,7 +268,7 @@ p a:hover {
   .root {
     display: flex;
     justify-content: center;
-    height: auto;
+    min-height: 100vh;
     padding: 20px 10px;
     overflow: auto;
   }
